sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var sorted:Boolean = false
  var gap:Int = getValueCount()
  do{
    sorted = true
    if(gap > 1)
      gap = (gap.toDouble / 1.3).toInt
    var i:Int = O
    while(i + gap < getValueCount()){
      if(getValue(i) > getValue(i + gap)){
        swap(i, i + gap)
        sorted = false
      }
      i += 1
    }
  }
  while(gap > 1 || !sorted)
}